prod option compatibility achieved

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
+Sliders should be reset to last value rather than default when last value is stored.
+Vertical scrollbar on left pane should follow general application style.
 should country name stay inside coutry and grow only on mouse over.
 should a special country colors be set when no data available, or not for current context.
 should all siblings country colors be updated based on current context selection
 should one be only able to compare incidence between zones of same level (sibling zones)
 should map be simplified to the current selected zone such as to set a single color to the area
-should the project build with the prod option (aot optimized  ahead of time)
+DONE should the project be buildable with the prod option (aot optimized  ahead of time)
